// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders height 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderRadius": 4,
      "flex": 2,
      "height": 97,
      "margin": 10,
      "marginTop": 0,
      "opacity": 1,
      "shadowColor": "#ccc",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.8,
      "shadowRadius": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#4e555f",
          "fontSize": 18,
          "marginLeft": 10,
          "marginTop": 7,
        }
      }
    >
      Height
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#9EABBC",
            "fontSize": 17,
          },
          Object {
            "marginRight": 10,
            "marginTop": 10,
          },
          Object {
            "fontFamily": "nubabi",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#4e555f",
          "fontSize": 28,
        }
      }
    >
      60
      cm
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={undefined}
      style={
        Object {
          "color": "#ED3154",
          "fontSize": 10,
          "fontWeight": "700",
        }
      }
    >
      Update
    </Text>
  </View>
</View>
`;

exports[`renders weight 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderRadius": 4,
      "flex": 2,
      "height": 97,
      "margin": 10,
      "marginTop": 0,
      "opacity": 1,
      "shadowColor": "#ccc",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.8,
      "shadowRadius": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#4e555f",
          "fontSize": 18,
          "marginLeft": 10,
          "marginTop": 7,
        }
      }
    >
      Weight
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#9EABBC",
            "fontSize": 17,
          },
          Object {
            "marginRight": 10,
            "marginTop": 10,
          },
          Object {
            "fontFamily": "nubabi",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#4e555f",
          "fontSize": 28,
        }
      }
    >
      30
      kg
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={undefined}
      style={
        Object {
          "color": "#ED3154",
          "fontSize": 10,
          "fontWeight": "700",
        }
      }
    >
      Update
    </Text>
  </View>
</View>
`;
